--- a/style.css
+++ b/style.css
@@ -56,6 +56,27 @@ body {
     background-color: white;
 }
 
+
+.card {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    flex: 0 0 300px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -74,7 +95,10 @@ body {
 }
 
 .main {
+  display: flex;
+  flex-flow: column;
   flex: 75%; /* Set the width of the main content */
+  justify-content: center;
   background-color: white; /* White background color */
   padding: 15px; /* Some padding */
   color: #0B208B; /* White text color */
