--- a/style.css
+++ b/style.css
@@ -9,12 +9,16 @@ body {
   text-align: left;
   background: #0B208B;
   color: white;
-  height: 25vh;
 }
 
 .header-link {
     color: white;
     text-decoration: none; /* Remove underline */
+}
+
+.header-logo {
+    max-height: 20vh;
+    max-width: 100%
 }
 
 /* Increase the font size of the h1 element */
@@ -56,13 +60,16 @@ body {
     background-color: white;
 }
 
+.article {  /*This is the text below the picture */
+    color: #0B208B;
+    text-decoration: none; /* Remove underline */
+}
 
 .card {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 3% auto;
     width: 50%;
-    flex: 0 0 300px;
+    flex: 0 0 auto;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
 }
@@ -76,6 +83,46 @@ body {
 .container {
   padding: 2px 16px;
 }
+
+.work-card-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 75%;
+    padding: 15px;
+}
+
+.work-card {
+    display: block;
+    margin: 3% auto;
+    width: 30%;
+    flex: 0 0 auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    min-width: 200px;
+    max-width: 500px;
+    text-decoration: none;
+
+}
+
+.work-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.work-card-title {
+    /*font-weight: bold;
+    font-size: 1.2em;*/
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    color: #0B208B;
+}
+
+.work-card-title:hover {
+    color: deepskyblue; /* Blue text color */
+}
+
 
 * {
   box-sizing: border-box;
@@ -98,7 +145,6 @@ body {
   display: flex;
   flex-flow: column;
   flex: 75%; /* Set the width of the main content */
-  justify-content: center;
   background-color: white; /* White background color */
   padding: 15px; /* Some padding */
   color: #0B208B; /* White text color */
@@ -111,6 +157,26 @@ body {
 
 .class-link a:hover {
   color: deepskyblue; /* Blue text color */
+}
+
+.loading-image {
+    margin: 0% auto;
+    width: 10%;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  width: 75%;
+
+}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #0B208B;
+  color: white;
 }
 
 
